# comb567_fig

./: .gitignore  check_bonus_51_step.py  comb7_df.csv  count_FR_fig.py  count_aa.py  count_comb5_fig.py  count_comb5_fig_with_pair.py  count_comb6.py  count_kkk.py  pyproject.toml  rp_discount.py  test_comb5.py  test_comb5_shot.py  test_comb6.py  test_comb7.py  test_do_comb5_json.py  test_read.py  test_short_comb.py
core/: __init__.py  config.py
csv/: comb5.csv  comb5_fig.csv  comb5_fig_with_pairs.csv  comb6_fig.csv  comb6_fig_gen.csv  comb_aa_fig.csv  comb_kkk_fig.csv
subjects/: __init__.py  comb_name.py
subjects/bonuses/: bonus5kkk.py  bonus_5_1_step.py
subjects/comb5/: comb5.py  comb5_short.py  comb5_simple.py
subjects/comb6/: comb6.py
subjects/comb7/: comb7_utils.py  comb_7_list_wo_suit.py
subjects/comb_name/: __init__.py  comb_aa_name.py  comb_kkkk_name.py  comb_name.py
subjects/comb_shorts/: __init__.py  comb_short.py
subjects/deck/: card.py
utils/: __init__.py  comb_aa_define.py  comb_king_define.py  read_json5.py
